--- a/NuGet.Config
+++ b/NuGet.Config
@@ -14,5 +14,6 @@
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
     <add key="myget.org" value="https://www.myget.org/F/nunit/api/v3/index.json" />
+    <!-- <add key="local" value="c:\nuget" /> -->
   </packageSources>
 </configuration>
